fix: updated the report title name

--- a/jmeter-base/properties/user.properties
+++ b/jmeter-base/properties/user.properties
@@ -52,7 +52,7 @@ jmeter.save.saveservice.print_field_names=true
 ################## Reporting configuration  ################################################################
 ############################################################################################################
 
-jmeter.reportgenerator.report_title=Global JMeter Test Report
+jmeter.reportgenerator.report_title=HTML JMeter Test Report
 
 # Used to generate a report based on a date range if needed
 # Default date format (from SimpleDateFormat Java API and Locale.ENGLISH)
